--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<meta charset = "UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hello World!</title>
+	<title>随便写写</title>
 </head>
 <body>
-	<h1>Hello World!</h1>
-	<p>你好，世界！</p>
-    <a href="https://www.baidu.com">百度一下</a>
+	<a href="/new1.html">1.动漫网站</a>
     <img src="https://www.baidu.com/img/bd_logo1.png" alt="百度logo">
+    <a href="https://www.baidu.com">百度一下</a>
     <br>
-    <a href="https://www.bilibili.com/" alt="哔哩哔哩">Bilibili</a>
     <img src="https://www.bilibili.com/favicon.ico" alt="哔哩哔哩logo">
+    <a href="https://www.bilibili.com/" alt="哔哩哔哩">Bilibili</a>
 </body>
 </html>
