--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>随便写写</title>
 </head>
 <body>
-	<a href="/new1.html">1.动漫网站</a>
+	<a href="/first/new1.html">1.动漫网站</a>
     <img src="https://www.baidu.com/img/bd_logo1.png" alt="百度logo">
     <a href="https://www.baidu.com">百度一下</a>
     <br>
