--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>随便写写</title>
 </head>
-<body>
+<body style="background-color:#ffffff">
+    <p>欢迎访问我的网站</p>
+    <br>
 	<a href="/first/new1.html">1.动漫网站</a>
     <br>
-    <img src="https://www.bilibili.com/favicon.ico" alt="哔哩哔哩logo">
-    <a href="https://www.bilibili.com/" alt="哔哩哔哩">Bilibili</a>
+    <a href="/frist/game.html">2.游戏网站</a>
+    <br>
 </body>
 </html>
