--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
 	<a href="/first/new1.html">1.动漫网站</a>
     <br>
-    <a href="/frist/game.html">2.游戏网站</a>
+    <a href="/first/game.html">2.游戏网站</a>
     <br>
 </body>
 </html>
