--- a/game.html
+++ b/game.html
@@ -11,6 +11,19 @@
         }
         #controls {
             margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        #controlRow {
+            display: flex;
+            justify-content: center;
+        }
+        button {
+            padding: 15px; /* 增加按钮的内边距以扩大按钮 */
+            font-size: 20px; /* 增加字体大小以便于点击 */
+            margin: 5px; /* 增加按钮之间的间距 */
+            cursor: pointer; /* 鼠标经过时显示手形光标 */
         }
         #restartButton, #menu {
             margin-top: 10px;
@@ -29,12 +42,16 @@
         <h2>欢迎来到贪吃蛇游戏！</h2>
         <button id="startButton">开始游戏</button>
     </div>
-    
     <div id="controls">
-        <button id="up">上</button>
-        <button id="left">左</button>
+    <button id="up">上</button>
+    </div>
+    <div id="controls">
+        <div id="controlRow">
+            <button id="left">左</button>
+            .................
+            <button id="right">右</button>
+        </div>
         <button id="down">下</button>
-        <button id="right">右</button>
     </div>
     
     <button id="restartButton">重新开始</button>
